--- a/public/index.html
+++ b/public/index.html
@@ -18,8 +18,7 @@
                     <div class="form-group">
                         <form action="upload-file" method="post" enctype="multipart/form-data">
                             <input type="file" name="maze-file"></input>
-                            <p class="help-block">Choose a maze file (JSON).</p>
-                            <input type="submit" name="submit">Submit</input>
+                            <input type="submit" name="submit"></input>
                         </form>
                     </div>
                 </div>
