--- a/public/index.html
+++ b/public/index.html
@@ -16,8 +16,8 @@
             <div class="row">
                 <div class="col-md-6 col-md-offset-3 text-center">
                     <div class="form-group">
-                        <form action="upload-file" method="post" enctype="multipart/form-data">
-                            <input type="file" name="maze-file"></input>
+                        <form id="mazeForm" action="/upload-file" method="post" enctype="multipart/form-data">
+                            <input type="file" name="mazeFile"></input>
                             <input type="submit" name="submit"></input>
                         </form>
                     </div>
@@ -26,7 +26,7 @@
             </div>
             <div class="row">
                 <div class="col-md-6 col-md-offset-3 text-center">
-                    <canvas id="maze" height="500" width="500"></canvas>
+                    <canvas id="maze" class="maze" height="500" width="500"></canvas>
                 </div>
             </div>
         </div>
@@ -34,5 +34,6 @@
         <script src="/socket.io/socket.io.js"></script>
         <script src="js/app.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+        <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery.form/3.51/jquery.form.min.js"></script>
     </body>
 </html>
