--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,9 @@
         <link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
-        <script src="js/app.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+        <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery.form/3.51/jquery.form.min.js"></script>
+
     </head>
 
     <body>
@@ -26,14 +27,12 @@
             </div>
             <div class="row">
                 <div class="col-md-6 col-md-offset-3 text-center">
-                    <canvas id="maze" class="maze" height="500" width="500"></canvas>
+                    <canvas id="mazeCanvas" class="maze" height="500" width="500"></canvas>
                 </div>
             </div>
         </div>
 
         <script src="/socket.io/socket.io.js"></script>
         <script src="js/app.js"></script>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-        <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery.form/3.51/jquery.form.min.js"></script>
     </body>
 </html>
