--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
 
             </div>
             <div class="row">
-                <div class="col-md-6 col-md-offset-3 text-center">
+                <div id="canvasContainer" class="col-md-6 col-md-offset-3 text-center">
                     <canvas id="mazeCanvas" class="maze" height="500" width="500"></canvas>
                 </div>
             </div>
