--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
 
                 <div class="col-md-6">
                     <div id="canvasContainer">
-                        <canvas id="mazeCanvas" class="maze" height="500" width="500"></canvas>
+                        <canvas id="mazeCanvas" class="maze" height="500" width="500" style="display:none;"></canvas>
                     </div>
                 </div>
             </div>
