Add feedback while computing the solution

--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,7 @@
                             <label class="btn btn-success btn-submit">
                                 Submit <input type="submit" class="input-submit" style="display: none;">
                             </label>
+                            <label class="submit-feedback"></label>
                         </form>
                     </div>
                 </div>
@@ -45,7 +46,6 @@
             </div>
         </div>
 
-        <script src="/socket.io/socket.io.js"></script>
         <script src="js/app.js"></script>
     </body>
 </html>
